--- a/QOL-Mod.csproj
+++ b/QOL-Mod.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>QOL-Mod</AssemblyName>
     <Description>A mod that offers quality-of-life improvements and additions to Stick Fight: The Game.</Description>
     <Version>1.17.4</Version>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <RootNamespace>QOL</RootNamespace>
   </PropertyGroup>
 
@@ -41,20 +41,32 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Reference Include="Assembly-CSharp">
-      <HintPath>Assembly-CSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>Assembly-CSharp-firstpass.dll</HintPath>
-    </Reference>
-    <Reference Include="TextMeshPro-1.0.55.56.0b9">
-      <HintPath>TextMeshPro-1.0.55.56.0b9.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.UI">
-      <HintPath>UnityEngine.UI.dll</HintPath>
-    </Reference>
-    <Reference Include="Lidgren.Network">
-      <HintPath>Lidgren.Network.dll</HintPath>
-    </Reference>
+	  <Reference Include="Assembly-CSharp">
+		  <HintPath>D:\SteamLibrary\steamapps\common\StickFightTheGame\StickFight_Data\Managed\Assembly-CSharp.dll</HintPath>
+	  </Reference>
+	  <Reference Include="Assembly-CSharp-firstpass">
+		  <HintPath>D:\SteamLibrary\steamapps\common\StickFightTheGame\StickFight_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+	  </Reference>
+	  <Reference Include="Lidgren.Network">
+		  <HintPath>D:\SteamLibrary\steamapps\common\StickFightTheGame\StickFight_Data\Managed\Lidgren.Network.dll</HintPath>
+	  </Reference>
+	  <Reference Include="Mono.Security">
+		  <HintPath>..\..\..\StickFight_Data\Managed\Mono.Security.dll</HintPath>
+	  </Reference>
+	  <Reference Include="TextMeshPro-1.0.55.56.0b9">
+		  <HintPath>..\..\..\StickFight_Data\Managed\TextMeshPro-1.0.55.56.0b9.dll</HintPath>
+	  </Reference>
+	  <Reference Include="UnityEngine">
+		  <HintPath>..\..\..\StickFight_Data\Managed\UnityEngine.dll</HintPath>
+	  </Reference>
+	  <Reference Include="UnityEngine.Analytics">
+		  <HintPath>..\..\..\StickFight_Data\Managed\UnityEngine.Analytics.dll</HintPath>
+	  </Reference>
+	  <Reference Include="UnityEngine.Networking">
+		  <HintPath>..\..\..\StickFight_Data\Managed\UnityEngine.Networking.dll</HintPath>
+	  </Reference>
+	  <Reference Include="UnityEngine.UI">
+		  <HintPath>..\..\..\StickFight_Data\Managed\UnityEngine.UI.dll</HintPath>
+	  </Reference>
   </ItemGroup>
 </Project>
