--- a/QOL-Mod.csproj
+++ b/QOL-Mod.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net35</TargetFramework>
     <AssemblyName>QOL-Mod</AssemblyName>
     <Description>A mod that offers quality-of-life improvements and additions to Stick Fight: The Game.</Description>
-    <Version>1.17.4</Version>
+    <Version>1.18.0</Version>
     <LangVersion>preview</LangVersion>
     <RootNamespace>QOL</RootNamespace>
   </PropertyGroup>
@@ -42,13 +42,13 @@
   
   <ItemGroup>
 	  <Reference Include="Assembly-CSharp">
-		  <HintPath>D:\SteamLibrary\steamapps\common\StickFightTheGame\StickFight_Data\Managed\Assembly-CSharp.dll</HintPath>
+	    <HintPath>..\..\..\StickFight_Data\Managed\Assembly-CSharp.dll</HintPath>
 	  </Reference>
 	  <Reference Include="Assembly-CSharp-firstpass">
-		  <HintPath>D:\SteamLibrary\steamapps\common\StickFightTheGame\StickFight_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+	    <HintPath>..\..\..\StickFight_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
 	  </Reference>
 	  <Reference Include="Lidgren.Network">
-		  <HintPath>D:\SteamLibrary\steamapps\common\StickFightTheGame\StickFight_Data\Managed\Lidgren.Network.dll</HintPath>
+	    <HintPath>..\..\..\StickFight_Data\Managed\Lidgren.Network.dll</HintPath>
 	  </Reference>
 	  <Reference Include="Mono.Security">
 		  <HintPath>..\..\..\StickFight_Data\Managed\Mono.Security.dll</HintPath>
